# tokri

./: .flatpakref  .gitignore  CHANGELOG.md  CMakeLists.txt  DistroTest.md  README.md  StandardNames.h  build-macos.sh  build-windows.bat  build.sh  closebutton.cpp  copyworker.cpp  copyworker.h  directorycopyworker.cpp  directorycopyworker.h  draghandle.cpp  draghandle.h  dropawarefilesystemmodel.cpp  dropawarefilesystemmodel.h  drophandler.cpp  drophandler.h  droppableswindow.cpp  droppableswindow.h  droppableswindow.ui  filenameprovider.cpp  filenameprovider.h  filepathprovider.h  fstolistproxy.cpp  fstolistproxy.h  horizontalshakedetector.cpp  linuxmouseinterceptor.h  listitemdelegate.cpp  listitemdelegate.h  main.cpp  mouseinterceptor.cpp  mouseinterceptor.h  net.surajyadav.Tokri.flatpak  nointernaldraglistview.cpp  nointernaldraglistview.h  oneman.jarusll.Tokri.desktop  (+18 more)
deploy/linux/: Containerfile  Tokri.desktop  build_appimage.sh  build_container.sh  make_app_dir.sh  make_appimage.sh  oneman.jarusll.Tokri.yml
repo/: summary  summary.idx
repo/refs/heads/app/net.surajyadav.Tokri/x86_64/: stable
repo/summaries/: 0a688b98f82420f13757f5a29c0393e9816989ad79ffbcd300ef23286352f445-6dcc71c4c849920a6999e6655fd02d47892bc4f0dc7692273f2bde3adab297ce.delta
resources/: Tokri.icns  net.surajyadav.Tokri.desktop
scripts/: build.sh  net.surajyadav.Tokri.yml
src/: MacWindowLevel.h  MacWindowLevel.mm  closebutton.cpp  closebutton.h  copyworker.cpp  copyworker.h  dropawarefilesystemmodel.h  filepathprovider.cpp  horizontalshakedetector.cpp  horizontalshakedetector.h  linuxmouseinterceptor.cpp  listitemdelegate.cpp  macosmouseinterceptor.cpp  macosmouseinterceptor.h  main.cpp  nointernaldraglistview.h  remoteurldrophandler.cpp  sleekscrollbar.cpp  sleekscrollbar.h  sortfilterproxy.cpp  sortfilterproxy.h  standardnames.h  standardpaths.h  textfile.h  themeprovider.h  thumbnailprovider.cpp  thumbnailprovider.h  tokriwindow.cpp  tokriwindow.h  tokriwindow.ui  windowsmouseinterceptor.h
